@@ -1,32 +1,26 @@
 package PL_25.shuttleplay.Service;
 
 
-import PL_25.shuttleplay.dto.Matching.AutoMatchRequest;
-import PL_25.shuttleplay.dto.Matching.MMRDTO;
-import PL_25.shuttleplay.dto.Matching.ProfileDTO;
 import PL_25.shuttleplay.Entity.Game.*;
-import PL_25.shuttleplay.Repository.*;
-import PL_25.shuttleplay.Entity.Game.*;
-import PL_25.shuttleplay.Repository.*;
-import PL_25.shuttleplay.dto.Matching.AutoMatchRequest;
-import PL_25.shuttleplay.dto.Matching.MMRDTO;
-import PL_25.shuttleplay.dto.Matching.ProfileDTO;
 import PL_25.shuttleplay.Entity.Location;
 import PL_25.shuttleplay.Entity.User.MMR;
 import PL_25.shuttleplay.Entity.User.NormalUser;
 import PL_25.shuttleplay.Entity.User.Profile;
+import PL_25.shuttleplay.Repository.*;
 import PL_25.shuttleplay.Util.GeoUtil;
+import PL_25.shuttleplay.dto.Matching.ManualMatchRequest;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,9 +30,10 @@ public class AutoMatchService {
     private final GameRoomRepository gameRoomRepository;
     private final GameRepository gameRepository;
     private final NormalUserRepository normalUserRepository;
-    private final GameHistoryRepository gameHistoryRepository;
     private final GameParticipantRepository gameParticipantRepository;
 
+    @PersistenceContext
+    private EntityManager entityManager;
 
     // 유효성 검사
     private void validateUsersBeforeMatch(List<Long> userIds, GameRoom currentRoomOrNull) {
@@ -57,87 +52,87 @@ public class AutoMatchService {
         }
     }
 
-    // 통합된 매칭 큐 등록
-    public MatchQueueResponse registerToQueue(Long userId, AutoMatchRequest request) {
+    // 사전 매칭 큐 등록용 (게임방 매칭)
+    public MatchQueueResponse registerToQueue(Long userId, ManualMatchRequest request) {
+        return registerToQueue(userId, null, request, true); // 내부 통합 메서드로 위임 (isPreMatch = true)
+    }
+
+    // 현장 매칭 큐 등록용 (게임 매칭)
+    public MatchQueueResponse registerToQueue(Long userId, Long gameRoomId, ManualMatchRequest request) {
+        return registerToQueue(userId, gameRoomId, request, false); // 내부 통합 메서드로 위임 (isPreMatch = false)
+    }
+
+    // 매칭 큐 등록 내부 통합 처리 메서드
+    // - gameRoomId는 현장 게임 매칭 시에만 사용됨
+    // - isPreMatch가 true면 사전 매칭, false면 현장 매칭
+    private MatchQueueResponse registerToQueue(Long userId, Long gameRoomId, ManualMatchRequest request, boolean isPreMatch) {
         NormalUser user = normalUserRepository.findById(userId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "사용자를 찾을 수 없음"));
 
-        // location 필드 입력되었는지 검사
-        if (request.getLocation() == null ||
-                request.getLocation().getCourtName() == null ||
-                request.getLocation().getCourtAddress() == null) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "코트 이름과 주소는 필수입니다.");
+        // 사전 매칭인 경우 location 정보 필수
+        if (isPreMatch) {
+            if (request.getLocation() == null ||
+                    request.getLocation().getCourtName() == null ||
+                    request.getLocation().getCourtAddress() == null) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "사전 매칭 시 코트 이름과 주소는 필수입니다.");
+            }
         }
 
-        // 해당 유저가 이미 room에 입장되어있는지 검사
-        Long roomId = user.getGameRoom() != null ? user.getGameRoom().getGameRoomId() : null;
+        // 이미 매칭 큐에 등록된 유저인 경우 중복 방지
+        boolean alreadyQueued =
+                matchQueueRepository.existsByUser_UserIdAndMatchedFalseAndGameRoomIsNull(userId) ||
+                        matchQueueRepository.existsByUser_UserIdAndMatchedFalseAndGameRoomIsNotNull(userId);
 
-        if (roomId != null &&
-                matchQueueRepository.existsByUser_UserIdAndGameRoom_GameRoomIdAndMatchedFalse(userId, roomId)) {
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "이미 해당 게임방에 매칭 등록이 되어있습니다.");
+        if (alreadyQueued) {
+            throw new ResponseStatusException(HttpStatus.CONFLICT, "이미 매칭 큐에 등록된 상태입니다.");
         }
 
-        if (matchQueueRepository.existsByUser_UserIdAndMatchedFalseAndGameRoomIsNotNull(userId)) {
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "이미 다른 게임방에 매칭 등록이 되어있습니다.");
-        }
-
-        // 대기열 엔트리 객체 생성
+        // MatchQueueEntry 생성 및 공통 속성 세팅
         MatchQueueEntry entry = new MatchQueueEntry();
         entry.setUser(user);
 
-        // 해당 유저의 profile 정보 가져오기
-        Profile profile = user.getProfile(); // DB에서 가져오기
+        // db에 저장된 사용자 profile, mmr 가져와서 매칭큐 엔트리 등록 진행
+        Profile profile = user.getProfile();
         if (profile == null) {
-            // DB에 없으면 dto 요청에서 가져옴
-            ProfileDTO dto = request.getProfile();
-            if (dto == null) {
-                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "프로필 정보가 없습니다. DB에도 없고 요청에도 없습니다.");
-            }
-
-            profile = new Profile();
-            profile.setGameType(dto.getGameType());
-            profile.setAgeGroup(dto.getAgeGroup());
-            profile.setPlayStyle(dto.getPlayStyle());
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "DB에 프로필 정보가 없습니다.");
         }
-        entry.setProfile(profile); // 큐 엔트리에 등록
+        entry.setProfile(profile);
 
-        // 해당 유저의 MMR 정보 가져오기 (DB에 있으면 가져오고, 없으면 request dto로 입력받은거 사용)
         MMR mmr = user.getMmr();
         if (mmr == null) {
-            MMRDTO mmrDto = request.getMmr();
-            if (mmrDto == null) {
-                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "MMR 정보가 없습니다. DB에도 없고 요청에도 없습니다.");
-            }
-
-            mmr = new MMR();
-            mmr.setRating(mmrDto.getRating());
-            mmr.setTolerance(mmrDto.getTolerance());
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "DB에 MMR 정보가 없습니다.");
         }
         entry.setMmr(mmr);
 
-        entry.setLocation(request.getLocation());
-        entry.setIsPrematched(request.isPreMatch());
+        entry.setIsPrematched(isPreMatch);
         entry.setMatched(false);
 
-        if (request.isPreMatch()) {
-            // 사전매칭 큐 등록
+        if (isPreMatch) {
+            // 사전 매칭용 설정
             entry.setMatchType(MatchQueueType.QUEUE_PRE);
+            entry.setLocation(request.getLocation());
             entry.setDate(request.getDate());
             entry.setTime(request.getTime());
-            entry.setGameRoom(null);
+            entry.setGameRoom(null); // 방 없음
         } else {
-            // 현장매칭 큐 등록
+            // 현장 매칭용 설정
+            if (gameRoomId == null) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "현장 매칭 시 gameRoomId는 필수입니다.");
+            }
+
+            GameRoom room = gameRoomRepository.findById(gameRoomId)
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "해당 게임방을 찾을 수 없습니다."));
+
             entry.setMatchType(MatchQueueType.QUEUE_LIVE);
+            entry.setGameRoom(room);
+            entry.setLocation(room.getLocation()); // 위치는 방 기준
             entry.setDate(LocalDate.now());
             entry.setTime(LocalTime.now());
-
-            if (user.getGameRoom() != null) {
-                entry.setGameRoom(user.getGameRoom());
-            }
         }
 
-        MatchQueueEntry savedEntry = matchQueueRepository.save(entry);
-        return new MatchQueueResponse(savedEntry);
+        // 매칭 큐 저장 및 응답
+        MatchQueueEntry saved = matchQueueRepository.save(entry);
+        return new MatchQueueResponse(saved);
     }
 
     // 매칭 큐 등록 취소
@@ -151,105 +146,18 @@ public class AutoMatchService {
         matchQueueRepository.deleteAll(entries);
     }
 
-
-    // ========================== 사전매칭 (구장 기준) ==========================
-    public Game matchPreCourtFromRoom(Long roomId) {
-        GameRoom room = gameRoomRepository.findById(roomId)
-                .orElseThrow(() -> new IllegalArgumentException("게임방을 찾을 수 없습니다."));
-
-        // 이 방에 등록된 QUEUE_LIVE 유저들만 필터링
-        List<MatchQueueEntry> queue = matchQueueRepository.findByMatchedFalseAndGameRoom_GameRoomId(roomId).stream()
-                .filter(entry -> entry.getMatchType() == MatchQueueType.QUEUE_LIVE)
-                .toList();
-
-        List<Long> userIds = queue.stream()
-                .map(e -> e.getUser().getUserId())
-                .toList();
-        validateUsersBeforeMatch(userIds, room);
-
-        // 게임 타입별 그룹핑 (단식/복식)
-        Map<String, List<MatchQueueEntry>> groupedByGameType = queue.stream()
-                .collect(Collectors.groupingBy(e -> e.getProfile().getGameType()));
-
-        for (Map.Entry<String, List<MatchQueueEntry>> entry : groupedByGameType.entrySet()) {
-            String gameType = entry.getKey();
-            List<MatchQueueEntry> candidates = entry.getValue();
-
-            // 사용자 수가 충분한지 먼저 검사
-            int required = getRequiredMatchCount(gameType);
-            if (candidates.size() < required + 1) continue; // 본인 + 상대들
-
-            // 매칭 시도
-            for (MatchQueueEntry me : candidates) {
-                List<MatchQueueEntry> potentialPartners = candidates.stream()
-                        .filter(other -> !other.getUser().getUserId().equals(me.getUser().getUserId()))
-                        .filter(other -> calculateSimilarity(me, other) >= 0.5) // ✅ 유사도 기준 적용
-                        .sorted((a, b) -> Double.compare(
-                                calculateSimilarity(b, me),
-                                calculateSimilarity(a, me)
-                        ))
-                        .limit(required)
-                        .toList();
-
-                if (potentialPartners.size() == required) {
-                    List<MatchQueueEntry> matchedGroup = new ArrayList<>(potentialPartners);
-                    matchedGroup.add(me);
-
-                    // 유효성 검사
-                    validateUsersBeforeMatch(
-                            matchedGroup.stream().map(e -> e.getUser().getUserId()).toList(), room);
-
-                    // 게임 생성
-                    Game game = new Game();
-                    game.setDate(LocalDate.now());
-                    game.setTime(LocalTime.now());
-                    game.setLocation(room.getLocation());
-                    Game savedGame = gameRepository.save(game);
-
-                    // 참가자 저장부분 수정
-                    List<GameParticipant> participants = matchedGroup.stream().map(queueEntry -> {
-                        GameParticipant p = new GameParticipant();
-                        p.setGame(savedGame);
-                        p.setUser(queueEntry.getUser());
-                        return p;
-                    }).toList();
-                    gameParticipantRepository.saveAll(participants);
-
-                    // 게임 히스토리 생성
-                    GameHistory history = new GameHistory();
-                    history.setGame(savedGame);
-                    history.setScoreTeamA(0); // 초기값
-                    history.setScoreTeamB(0);
-                    history.setCompleted(false);
-                    gameHistoryRepository.save(history);
-
-                    // 큐 상태 업데이트
-                    matchedGroup.forEach(q -> {
-                        q.setMatched(true);
-                        q.setIsPrematched(true);
-                    });
-                    matchQueueRepository.saveAll(matchedGroup);
-
-                    // 코드 수정
-                    List<NormalUser> users = matchedGroup.stream().map(MatchQueueEntry::getUser).toList();
-                    users.forEach(user -> user.setCurrentGame(savedGame));
-                    normalUserRepository.saveAll(users);
-
-                    return savedGame;
-                }
-            }
-        }
-        return null;
-    }
-
-    // ========================== 현장매칭 (구장 기준) ==========================
+    // 구장 기준 자동 매칭(현장/사전 전부 해당, 날짜/시간/위치 고려 없이 게임방 기준으로만 매칭)
+    @Transactional
     public Game matchLiveCourtFromRoom(Long roomId) {
         GameRoom room = gameRoomRepository.findById(roomId)
                 .orElseThrow(() -> new IllegalArgumentException("게임방을 찾을 수 없습니다."));
 
-        List<MatchQueueEntry> queue = matchQueueRepository.findByMatchedFalseAndGameRoom_GameRoomId(roomId);
+        // 게임방에 등록된 유저 중 아직 매칭되지 않은 QUEUE_LIVE 큐 가져오기
+        List<MatchQueueEntry> queue = matchQueueRepository
+                .findByMatchedFalseAndGameRoom_GameRoomId(roomId).stream()
+                .filter(entry -> entry.getMatchType() == MatchQueueType.QUEUE_LIVE)
+                .toList();
 
-        // 유효성 검사 추가
         List<Long> userIds = queue.stream()
                 .map(e -> e.getUser().getUserId())
                 .distinct()
@@ -259,7 +167,7 @@ public class AutoMatchService {
         for (MatchQueueEntry me : queue) {
             List<MatchQueueEntry> candidates = queue.stream()
                     .filter(other -> !other.equals(me))
-                    .filter(other -> calculateSimilarity(me, other) >= 0.5) // 유사도 조건 반영
+                    .filter(other -> isSimilarEnough(me, other))
                     .sorted((a, b) -> Double.compare(
                             calculateSimilarity(b, me),
                             calculateSimilarity(a, me)
@@ -271,27 +179,28 @@ public class AutoMatchService {
                 List<MatchQueueEntry> matchedGroup = new ArrayList<>(candidates);
                 matchedGroup.add(me);
 
-                // 게임 생성
-                Game game = buildGameFromQueueEntries(matchedGroup);
-                game.setLocation(room.getLocation()); // 게임방의 장소 정보로 설정
-                Game savedGame = gameRepository.save(game);
+                // 유효성 검사
+                validateUsersBeforeMatch(matchedGroup.stream().map(e -> e.getUser().getUserId()).toList(), room);
 
-                // 참가자 저장 수정
-                List<GameParticipant> participants = matchedGroup.stream().map(entry -> {
-                    GameParticipant p = new GameParticipant();
-                    p.setGame(savedGame);
-                    p.setUser(entry.getUser());
-                    return p;
-                }).toList();
-                gameParticipantRepository.saveAll(participants);
+                // 게임 생성 - 게임방의 정보 기준으로 설정
+                Game game = new Game();
+                game.setDate(room.getDate());
+                game.setTime(room.getTime());
+                game.setLocation(room.getLocation());
 
-                // 게임 히스토리 생성
-                GameHistory history = new GameHistory();
-                history.setGame(savedGame);
-                history.setScoreTeamA(0); // 초기값
-                history.setScoreTeamB(0);
-                history.setCompleted(false);
-                gameHistoryRepository.save(history);
+                // 참가자 리스트 구성 및 게임과 양방향 연결
+                List<GameParticipant> participants = new ArrayList<>();
+                for (MatchQueueEntry entry : matchedGroup) {
+                    GameParticipantId id = new GameParticipantId(null, entry.getUser().getUserId());
+
+                    // GameParticipant 생성 시 game 참조 설정
+                    GameParticipant participant = new GameParticipant(entry.getUser(), game);
+                    participants.add(participant);
+                }
+
+                game.setParticipants(participants); // cascade로 저장되게 연결
+
+                Game savedGame = gameRepository.save(game); // Game과 참가자 함께 저장됨
 
                 // 큐 상태 업데이트
                 matchedGroup.forEach(entry -> {
@@ -300,62 +209,74 @@ public class AutoMatchService {
                 });
                 matchQueueRepository.saveAll(matchedGroup);
 
-                // 사용자 게임 연결 (타입 수정)
+                // 유저 현재 게임 설정
                 List<NormalUser> users = matchedGroup.stream().map(MatchQueueEntry::getUser).toList();
                 users.forEach(user -> user.setCurrentGame(savedGame));
                 normalUserRepository.saveAll(users);
 
-
                 return savedGame;
             }
         }
+
         return null;
     }
 
-    // ========================== 사전매칭 (동네 기준) ==========================
-    public GameRoom createPreLocationMeetingRoomFromUser(Long userId, LocalDate date, LocalTime time, Location location) {
+    // 사전 매칭 (동네 기준) - 큐에 등록된 정보만으로 자동 매칭 및 게임방 생성
+    public GameRoom createPreLocationMeetingRoomFromUser(Long userId) {
+        // 1. 해당 유저의 매칭 큐 엔트리 조회
         MatchQueueEntry me = matchQueueRepository.findByUser_UserIdAndMatchedFalse(userId)
                 .stream()
                 .filter(entry -> entry.getGameRoom() == null)
-                .filter(entry -> entry.getDate().equals(date))
-                .filter(entry -> entry.getTime().equals(time))
                 .filter(entry -> entry.getMatchType() == MatchQueueType.QUEUE_PRE)
                 .findFirst()
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "사전매칭 큐에 등록된 유저가 없습니다."));
 
+        // 2. 등록된 정보에서 date, time, location 가져오기
+        LocalDate date = me.getDate();
+        LocalTime time = me.getTime();
+        Location location = me.getLocation();
+
+        // 3. 같은 조건 + 300m 이내 유저들 조회
         List<MatchQueueEntry> queue = matchQueueRepository.findByMatchedFalseAndMatchTypeAndGameRoomIsNull(MatchQueueType.QUEUE_PRE)
                 .stream()
                 .filter(other -> !other.getUser().getUserId().equals(userId))
                 .filter(other -> other.getDate().equals(date))
                 .filter(other -> other.getTime().equals(time))
+                .filter(other -> isNearby(location, other.getLocation())) // 거리 기준
                 .toList();
 
-        List<MatchQueueEntry> candidates = queue.stream()
-                .filter(other -> isNearby(me.getLocation(), other.getLocation()))
-                .filter(other -> isSimilarEnough(me, other))
-                .sorted((a, b) -> Double.compare(calculateSimilarity(b, me), calculateSimilarity(a, me)))
-                .limit(getRequiredMatchCount(me.getProfile().getGameType()))
-                .toList();
+        // 4. 게임 인원 충족 여부 확인
+        int required = me.getRequiredMatchCount() > 0
+                ? me.getRequiredMatchCount() - 1
+                : getRequiredMatchCount(me.getProfile().getGameType());
 
-        if (candidates.size() == getRequiredMatchCount(me.getProfile().getGameType())) {
+        List<MatchQueueEntry> candidates = queue.stream().limit(required).toList();
+
+        if (candidates.size() == required) {
+            // 5. 최종 매칭 대상 구성
             List<MatchQueueEntry> matchedGroup = new ArrayList<>(candidates);
             matchedGroup.add(me);
 
+            // 6. 유저 상태 확인
             List<Long> userIds = matchedGroup.stream().map(e -> e.getUser().getUserId()).toList();
             validateUsersBeforeMatch(userIds, null);
 
+            // 7. 큐 상태 업데이트
             matchedGroup.forEach(e -> e.setMatched(true));
             matchQueueRepository.saveAll(matchedGroup);
 
+            // 8. 게임방 생성
             List<NormalUser> users = matchedGroup.stream().map(MatchQueueEntry::getUser).toList();
 
             GameRoom room = new GameRoom();
             room.setDate(date);
             room.setTime(time);
-            room.setLocation(me.getLocation());
+            room.setLocation(location);
             room.setParticipants(users);
 
             GameRoom savedRoom = gameRoomRepository.save(room);
+
+            // 9. 유저에 게임방 연결
             users.forEach(u -> u.setGameRoom(savedRoom));
             normalUserRepository.saveAll(users);
 
@@ -365,45 +286,92 @@ public class AutoMatchService {
         return null;
     }
 
-    // ========================== 게임 생성 ==========================
-    public Game buildGameFromQueueEntries(List<MatchQueueEntry> entries) {
-        Game game = new Game();
-        MatchQueueEntry base = entries.get(0);
-        game.setDate(base.getDate());
-        game.setTime(base.getTime());
-        game.setLocation(base.getLocation());
+    // 사전 매칭 (구장 기준) - 큐에 등록된 정보만으로 게임방 자동 생성
+    public GameRoom createPreGymMeetingRoomFromUser(Long userId) {
+        // 1. userId로 큐에서 사전 매칭 등록 정보 찾기
+        MatchQueueEntry me = matchQueueRepository.findByUser_UserIdAndMatchedFalse(userId)
+                .stream()
+                .filter(entry -> entry.getGameRoom() == null)
+                .filter(entry -> entry.getMatchType() == MatchQueueType.QUEUE_PRE)
+                .findFirst()
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "사전매칭 큐에 등록된 유저가 없습니다."));
 
-        Game savedGame = gameRepository.save(game);
+        // 2. 등록된 큐 정보에서 날짜/시간/위치 가져오기
+        LocalDate date = me.getDate();
+        LocalTime time = me.getTime();
+        Location location = me.getLocation();
 
-        // GameParticipant 수정 부분
-        List<GameParticipant> participants = entries.stream().map(entry -> {
-            GameParticipant participant = new GameParticipant();
-            participant.setGame(savedGame);
-            participant.setUser(entry.getUser());
-            return participant;
-        }).collect(Collectors.toList());
-        gameParticipantRepository.saveAll(participants);
+        // 3. 동일 조건(날짜/시간/위치) 유저 큐 조회
+        List<MatchQueueEntry> queue = matchQueueRepository.findByMatchedFalseAndMatchTypeAndGameRoomIsNull(MatchQueueType.QUEUE_PRE)
+                .stream()
+                .filter(other -> !other.getUser().getUserId().equals(userId))
+                .filter(other -> other.getDate().equals(date))
+                .filter(other -> other.getTime().equals(time))
+                .filter(other -> isSameCourt(location, other.getLocation()))
+                .toList();
 
-        // NormalUser 객체에 currentGame 설정
-        for (GameParticipant gp : participants) {
-            NormalUser user = gp.getUser();
-            user.setCurrentGame(savedGame);
-            normalUserRepository.save(user);
+        // 4. 인원 수 충족 여부 확인
+        int required = me.getRequiredMatchCount() > 0
+                ? me.getRequiredMatchCount() - 1
+                : getRequiredMatchCount(me.getProfile().getGameType());
+
+        List<MatchQueueEntry> candidates = queue.stream().limit(required).toList();
+
+        if (candidates.size() == required) {
+            // 5. 매칭 대상 구성
+            List<MatchQueueEntry> matchedGroup = new ArrayList<>(candidates);
+            matchedGroup.add(me);
+
+            // 6. 유저 상태 검증
+            List<Long> userIds = matchedGroup.stream().map(e -> e.getUser().getUserId()).toList();
+            validateUsersBeforeMatch(userIds, null);
+
+            // 7. 매칭 완료 처리
+            matchedGroup.forEach(e -> e.setMatched(true));
+            matchQueueRepository.saveAll(matchedGroup);
+
+            // 8. 게임방 생성
+            List<NormalUser> users = matchedGroup.stream().map(MatchQueueEntry::getUser).toList();
+
+            GameRoom room = new GameRoom();
+            room.setDate(date);
+            room.setTime(time);
+            room.setLocation(location);
+            room.setParticipants(users);
+
+            GameRoom savedRoom = gameRoomRepository.save(room);
+
+            // 9. 유저에게 게임방 지정
+            users.forEach(u -> u.setGameRoom(savedRoom));
+            normalUserRepository.saveAll(users);
+
+            return savedRoom;
         }
 
-        return savedGame;
+        // 매칭 실패 시 null 반환
+        return null;
     }
 
-    // ========================== 유사도 계산 ==========================
+    // 구장 위치가 같은지 확인 (이름 + 주소 + 좌표는 허용 오차 내일 때)
+    private boolean isSameCourt(Location a, Location b) {
+        final double TOLERANCE = 0.0003; // 약 30m 이내
+
+        return a.getCourtName().equals(b.getCourtName())
+                && a.getCourtAddress().equals(b.getCourtAddress())
+                && Math.abs(a.getLatitude() - b.getLatitude()) <= TOLERANCE
+                && Math.abs(a.getLongitude() - b.getLongitude()) <= TOLERANCE;
+    }
+
+    // 300m 거리 이내 인지 확인
     private boolean isNearby(Location a, Location b) {
         return GeoUtil.calculateDistance(a.getLatitude(), a.getLongitude(),
                 b.getLatitude(), b.getLongitude()) <= 300;
     }
 
+    // 유사도 계산
     private boolean isSimilarEnough(MatchQueueEntry a, MatchQueueEntry b) {
         return calculateSimilarity(a, b) >= 0.5;
     }
-
     private double calculateSimilarity(MatchQueueEntry a, MatchQueueEntry b) {
         int match = 0;
         if (a.getProfile().getAgeGroup().equals(b.getProfile().getAgeGroup())) match++;
@@ -414,6 +382,7 @@ public class AutoMatchService {
         return match / 4.0;
     }
 
+    // 단복식 구분해 매칭시 필요한 사용자 계산
     private int getRequiredMatchCount(String gameType) {
         return switch (gameType) {
             case "단식" -> 1;
